# sparql-api-comparison

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docs.yml
basil/init/: meta.rq  register.py
docs/: _config.yml  _toc.yml  basil.ipynb  crafts.ipynb  helper.py  intro.md  ramose.ipynb  rdfproxy.ipynb
elda/: Dockerfile  oc.ttl
grlc/: Dockerfile
grlc/queries/: article-meta.rq
ramose/: Dockerfile  oc.hf
