[project]
name = "sparql-api-comparison"
version = "1.0.0"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "ruff",
    "pyright",
    "rdfproxy==0.10.1",
    "fastapi[standard]==0.136.3",
    "jupyter-book~=1.0.0",
    "requests>=2.34.2",
    "pyyaml>=6.0.3",
]

[tool.ruff]
extend-exclude = ["docs"]

[tool.pyright]
exclude = ["docs"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",       # docstrings
    "COM812",  # conflicts with the formatter
    "INP001",  # standalone init scripts, not importable packages
    "S310",    # URLs target controlled internal endpoints
]
